# micro-mongodb

./: .gitignore  CLAUDE.md  CMakeLists.txt  FreeRTOSConfig.h  LICENSE  README.md
docs/: api.md  architecture.md  atlas-setup.md  examples.md  getting-started.md  perf.md  porting-libbson.md  security.md  troubleshooting.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  aggregator.c  aggregator.h  freertos_hooks.c  logger_hook.c  lwipopts.h  main.c  mbedtls_config.h  telemetry.c  telemetry.h
src/bson/: .clang-format  CMakeLists.txt  port_pico.c
src/bson/bson/: bson-atomic.c  bson-config.h  bson-error.c  bson-version.h
src/bson/common/: common-b64.c  common-config.h  common-thread-private.h
src/logging/: CMakeLists.txt  logging.c  logging.h  logging_api.h  logging_config.h  types.h
src/umongoc/: CMakeLists.txt  micro_mongodb.h  mongo_auth.c  mongo_auth.h  mongo_ca.c  mongo_ca.h  mongo_client.c  mongo_client.h  mongo_crud.c  mongo_crud.h  mongo_cursor.c  mongo_cursor.h  mongo_dns.c  mongo_dns.h  mongo_time.c  mongo_time.h  mongo_transport.c  mongo_transport.h  mongo_uri.c  mongo_uri.h  mongo_wifi.c  mongo_wifi.h  mongo_wire.c  mongo_wire.h
